# transformer-from-scratch

./: .gitignore  README.md  pyproject.toml  pyproject.toml 11-42-03-704.toml
deep-learning/: 2. DeConvolutional layers.ipynb  3. AutoEncoder Demo (Conv2d and ConvTranspose2d).ipynb  EDL HW2 Python_Notebook_exp1_disable_L6_regularization.ipynb  EDL HW2 Python_Notebook_exp2_wgan-gp-100epochs.ipynb  EDL HW2 Python_Notebook_exp2_wgan-gp.ipynb  EDL HW2 Python_Notebook_exp3_wgan-gp-tanh-wide-channels-lower-lr-100.ipynb  EDL HW2 Python_Notebook_exp3_wgan-gp-tanh-wide-channels-lower-lr.ipynb  EDL HW2 Python_Notebook_exp3_wgan-gp-tanh-wide-channels.ipynb  EDL HW2 Python_Notebook_exp3_wgan-gp-tanh.ipynb  EDL HW2 Python_Notebook_exp7_wgan-gp-tanh-wide-channels-lower-lr-beta0.html  EDL HW2 Python_Notebook_exp7_wgan-gp-tanh-wide-channels-lower-lr-beta0.ipynb  EDL HW2 Python_Notebook_sagar_1010736.ipynb  deep-neural-network-training.ipynb  deep-neural-network.ipynb  instructions.md  neural-network-activation-functions.ipynb  shallow-neural-network.ipynb
gpt2-decoder/: gpt2-decoder.ipynb  utils.py
pre-transformers/: vanilla-rnn-vs-lstm.md
