[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = ""
authors = [
    {name = "sagerstack",email = "sagarpratapsingh15@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "jupyterlab (>=4.5.4,<5.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "importlib-metadata (>=8.7.1,<9.0.0)",
    "transformers (>=5.2.0,<6.0.0)",
    "einops (>=0.8.2,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.8"

